--- a/src/pages/work/[...slug].astro
+++ b/src/pages/work/[...slug].astro
@@ -8,6 +8,9 @@ import ItemNav from "@components/navigation/ItemNav.astro";
 import PageLayoutSplit from "@layouts/PageLayoutSplit.astro";
 import PageLayoutWide from "@layouts/PageLayoutWide.astro";
 import { t } from "@util/translate";
+
+// Force static site generation
+export const prerender = true;
 export async function getStaticPaths() {
   const posts = (await getCollection("project")).sort(
     (a, b) => b.data.date.valueOf() - a.data.date.valueOf(),
