--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -1,7 +1,6 @@
 ---
 import { getEntry } from "astro:content";
 import { marked } from "marked";
-import { Picture } from "astro-imagetools/components";
 import BaseHead from "@components/BaseHead.astro";
 import Header from "@components/Header.astro";
 import Footer from "@components/Footer.astro";
@@ -76,29 +75,12 @@ const contact = await getEntry("config", "contact");
           />
         )
       }
-      <Picture
+      <img
         slot="image"
         src={contact.data.form.thumbnail}
-        alt={`contact`}
-        sizes="50vw"
-        aspect={4 / 5}
-        format={["webp"]}
-        fit="cover"
-        layout="fill"
-        placeholder="blurred"
-        position="attention"
+        alt="contact"
         loading="lazy"
-        sizes="(max-width: 768px) 100vw, 40vw"
-        breakpoints={[420, 725, 960]}
-        artDirectives={[
-          {
-            media: "(max-width: 768px)",
-            ar: 21 / 9,
-            src: contact.data.form.thumbnail,
-            layout: "constrained",
-            breakpoints: [500, 601, 768, 820, 962, 1280, 1440, 1536, 1920],
-          },
-        ]}
+        class="h-full w-full object-cover"
       />
       <Icon name="close" class="w-6" />
     </ContactDialog>
