--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -1,7 +1,6 @@
 ---
 import { getEntry } from "astro:content";
 import { ViewTransitions } from "astro:transitions";
-import { importImage } from "astro-imagetools/api";
 import "../styles/global.css";
 
 const { data } = await getEntry("config", "about");
@@ -14,12 +13,9 @@ interface Props {
 
 const canonicalURL = new URL(Astro.url.pathname, Astro.site);
 const { title, description, thumbnail } = Astro.props;
-const searchImage = !!thumbnail
-  ? await importImage(`${thumbnail}?w=120&h=120&ar=1&position=entropy`)
-  : null;
-const socialImage = !!thumbnail
-  ? await importImage(`${thumbnail}?w=1200&h=630&ar=1&position=entropy`)
-  : null;
+// For now, use thumbnails directly - they'll still work for SEO even without optimization
+const searchImage = thumbnail || null;
+const socialImage = thumbnail || null;
 
 const pageTitle = `${title} | ${data.sitename}`;
 ---
