--- a/src/components/block/ImageGallery.astro
+++ b/src/components/block/ImageGallery.astro
@@ -1,5 +1,4 @@
 ---
-import { Picture } from "astro-imagetools/components";
 import { Icon } from "astro-icon/components";
 import { t } from "@util/translate";
 import Intersecting from "@components/common/Intersecting.vue";
@@ -44,13 +43,11 @@ if (container === "sm")
             )}?index=${index}&gallery=${gallery.join(",")}`}
           >
             <div class="transition-transform duration-1000 ease-in group-hover:scale-110 group-hover:duration-[2s]">
-              <Picture
+              <img
                 src={image.image}
-                aspect={aspect}
-                position="entropy"
                 alt={image.title}
-                sizes={sizes}
-                layout="fullWidth"
+                loading="lazy"
+                class={`h-auto w-full ${aspect ? `aspect-${aspect.replace(":", "-")}` : "aspect-square"} rounded object-cover`}
               />
             </div>
             <div class=" absolute inset-0 z-10  opacity-0 transition-all duration-1000 hover:opacity-100">
