--- a/src/components/cards/ItemCard.astro
+++ b/src/components/cards/ItemCard.astro
@@ -1,7 +1,6 @@
 ---
 import FormattedDate from "../FormattedDate.astro";
 import ItemFilter from "@components/navigation/ItemFilter.astro";
-import { Picture } from "astro-imagetools/components";
 import ProductPrice from "@components/shop/ProductPrice.astro";
 
 const { content, base_url, sizes, animate } = Astro.props;
@@ -19,20 +18,11 @@ const animation = `hero_${animate ? content.slug : Math.random()}`;
   >
     {
       content.data.thumbnail && (
-        <Picture
-          attributes={{
-            picture: {
-              class: "fade-in",
-            },
-          }}
-          sizes={sizes ? sizes : "100vw"}
-          position="attention"
+        <img
           src={content.data.thumbnail}
-          width={600}
-          height={600}
-          ar={1}
           alt={content.data.title}
-          layout="fill"
+          loading="lazy"
+          class="fade-in aspect-square h-full w-full object-cover"
         />
       )
     }
