--- a/src/components/cards/ItemCardFlex.astro
+++ b/src/components/cards/ItemCardFlex.astro
@@ -1,7 +1,6 @@
 ---
 import FormattedDate from "../FormattedDate.astro";
 import ItemFilter from "../navigation/ItemFilter.astro";
-import { Picture } from "astro-imagetools/components";
 import ProductPrice from "@components/shop/ProductPrice.astro";
 
 const { content, base_url, animate } = Astro.props;
@@ -20,19 +19,11 @@ const animation = `hero_${animate ? content.slug : Math.random()}`;
           class="transition-transform duration-500 group-hover:scale-110 group-hover:duration-[3s]"
           transition:name={`${animation}`}
         >
-          <Picture
-            attributes={{
-              picture: {
-                class: "z-0 w-40 fade-in ",
-              },
-            }}
-            position="attention"
+          <img
             src={content.data.thumbnail}
-            width={200}
-            height={200}
-            ar={1}
-            alt={content.data.title}
-            layout="fullWidth"
+            alt={content.data.thumbnail}
+            loading="lazy"
+            class="fade-in z-0 h-40 w-40 object-cover"
           />
         </div>
       )
