--- a/src/components/cards/ItemCardSmall.astro
+++ b/src/components/cards/ItemCardSmall.astro
@@ -1,7 +1,6 @@
 ---
 import FormattedDate from "../FormattedDate.astro";
 import ItemFilter from "../navigation/ItemFilter.astro";
-import { Picture } from "astro-imagetools/components";
 import ProductPrice from "@components/shop/ProductPrice.astro";
 
 const { content, base_url, animate } = Astro.props;
@@ -52,19 +51,11 @@ const cardAnimation = `card_${animate ? content.slug : Math.random()}`;
   >
     {
       content.data.thumbnail && (
-        <Picture
-          attributes={{
-            picture: {
-              class: "z-0 w-20",
-            },
-          }}
-          position="attention"
+        <img
           src={content.data.thumbnail}
-          width={100}
-          height={100}
-          ar={1}
           alt={content.data.title}
-          layout="fullWidth"
+          loading="lazy"
+          class="z-0 h-20 w-20 object-cover"
         />
       )
     }
