--- a/src/layouts/PageLayoutSplit.astro
+++ b/src/layouts/PageLayoutSplit.astro
@@ -1,6 +1,5 @@
 ---
 import BaseLayout from "./BaseLayout.astro";
-import { Picture } from "astro-imagetools/components";
 import ItemFilter from "@components/navigation/ItemFilter.astro";
 import FormattedDate from "@components/FormattedDate.astro";
 import Block from "@components/block/Block.astro";
@@ -48,22 +47,12 @@ const hasBlocks = blocks && blocks.length > 0;
       >
         {
           thumbnail && (
-            <Picture
-              attributes={{
-                picture: {
-                  class: "sm:h-screen z-0",
-                  style: `opacity: ${style.hero_image_opacity || 0.7} `,
-                },
-              }}
+            <img
               src={thumbnail}
-              sizes="(max-width: 767px) 100vw, 100vh"
-              width={1920}
-              height={1920}
-              ar={1}
-              position="entropy"
-              loading="eager"
               alt={title}
-              layout="fill"
+              loading="eager"
+              class="z-0 h-full w-full object-cover sm:h-screen"
+              style={`opacity: ${style.hero_image_opacity || 0.7}`}
             />
           )
         }
