--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -66,7 +66,7 @@ const contact = await getEntry("config", "contact");
     </Footer>
     <Init client:only="vue" />
 
-    <ContactDialog client:only="vue" contact={contact.data.form}>
+    <ContactDialog client:idle contact={contact.data.form}>
       {
         contact?.data?.form?.intro && (
           <div
